--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 body {
+  background-color: #e5c5ff;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +12,137 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.form {
+  margin: auto;
+  width: 770px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
+  border-radius: 10px; /* Adjust the border radius to control the roundness of the corners */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Adjust the shadow properties as desired */
+  background-color: #ffffff;
+  margin-bottom: 20px;
+}
+
+div {
+  display: block;
+}
+
+input:focus {
+  outline: none;
+}
+
+.field {
+  border: none;
+}
+
+.field:hover{
+  filter: brightness(90%);
+}
+
+div.question {
+  margin-bottom: 15px;
+}
+
+.underline {
+    background-color: rgba(0,0,0,.12);
+    height: 1px;
+}
+
+.question.field::placeholder {
+  font-size: 12pt;
+}
+
+
+.question.field {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 19px;
+}
+
+.answers {
+  margin-top: 8px;
+}
+
+.disabled-checkbox {
+  opacity: 0.5;
+  flex: 1;
+}
+
+.disabled-checkbox:hover {
+  opacity: 0.5;
+}
+
+.answer {
+  display: flex;
+  margin-bottom: 8px;
+  align-items: center;
+}
+
+.answer.field {
+  padding: 2px;
+  flex: 1;
+  margin-right: 5px;
+}
+
+.answer::placeholder {
+  font-size: 11pt;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+/* Style the custom checkbox */
+label {
+  display: inline-block;
+  width: 18px; /* Adjust the size of the checkbox */
+  height: 18px; /* Adjust the size of the checkbox */
+  border-radius: 50%;
+  background-color: #fff;
+  border: 1px solid rgba(0,0,0,.12);
+  cursor: pointer;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+/* Style the checked state of the custom checkbox */
+input[type="checkbox"]:checked + label {
+  background-color: #000; /* Adjust the color when checked */
+}
+
+.button-2 {
+  background-color: rgba(224, 224, 224, 1);
+  border-radius: 30px;
+  border-width: 0;
+  color: #333333;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 10px;
+  margin: 0;
+  padding: 10px 10px;
+  text-align: center;
+  width: 100%;
+}
+
+.button-2:hover {
+  filter: brightness(90%);
+}
+
+.close {
+  font-size: 25px;
+  color: #333333;
+}
+.close:hover {
+  opacity: 0.5;
+}
+
+.closing-button {
+  border: none;
+  background-color:transparent;
 }
