quiz-maker form completed

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #e5c5ff;
+  background-color: #f8efff;
   margin: 0;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 400;
@@ -14,17 +14,25 @@ code {
     monospace;
 }
 
-.form {
+.creator {
+  position: relative;
   margin: auto;
   width: 770px;
+}
+
+.form {
+  margin: auto;
+  width: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
   padding-right: 24px;
-  border-radius: 10px; /* Adjust the border radius to control the roundness of the corners */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Adjust the shadow properties as desired */
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
 }
 
 div {
@@ -43,6 +51,13 @@ input:focus {
   filter: brightness(90%);
 }
 
+.title.field {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 19px;
+  font-size: 16pt;
+}
+
 div.question {
   margin-bottom: 15px;
 }
@@ -55,7 +70,6 @@ div.question {
 .question.field::placeholder {
   font-size: 12pt;
 }
-
 
 .question.field {
   width: 100%;
@@ -96,11 +110,10 @@ input[type="checkbox"] {
   display: none;
 }
 
-/* Style the custom checkbox */
 label {
   display: inline-block;
-  width: 18px; /* Adjust the size of the checkbox */
-  height: 18px; /* Adjust the size of the checkbox */
+  width: 18px; 
+  height: 18px;
   border-radius: 50%;
   background-color: #fff;
   border: 1px solid rgba(0,0,0,.12);
@@ -109,9 +122,8 @@ label {
   margin-right: 10px;
 }
 
-/* Style the checked state of the custom checkbox */
 input[type="checkbox"]:checked + label {
-  background-color: #000; /* Adjust the color when checked */
+  background-color: #000;
 }
 
 .button-2 {
@@ -134,15 +146,64 @@ input[type="checkbox"]:checked + label {
   filter: brightness(90%);
 }
 
-.close {
+.plus-question {
+  height: 30px;
+  text-align: center;
+}
+
+.button-plus-question {
+  height: 100%;
+  border: none;
+  border-radius: 70%;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.plus-img {
+  height: 100%;
+  opacity: 0.5;
+}
+
+.close-answer {
   font-size: 25px;
   color: #333333;
 }
+
+.close-question {
+  color: #333333;
+}
+
 .close:hover {
   opacity: 0.5;
 }
 
 .closing-button {
   border: none;
-  background-color:transparent;
+  background-color: transparent;
+}
+
+.remove-question {
+  margin: 20px;
+  margin-bottom: 0px;
+  margin-right: 0px;
+  height: 48px;
+  text-align: right;
+}
+
+.remove-question-button {
+  width: 48px;
+  height: 100%;
+  border: none;
+  border-radius: 50%;
+  background-color:  rgba(224, 224, 224, 1);
+}
+
+.trash {
+  height: 50%;
+  opacity: 0.7;
+  text-align: center;
+  align-content: center;
+}
+
+.remove-question-button:hover {
+  filter: brightness(90%);
 }
