--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
   background-color: #f8efff;
   margin: 0;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0;
@@ -67,7 +68,7 @@ div.question {
     height: 1px;
 }
 
-.question.field::placeholder {
+.question {
   font-size: 12pt;
 }
 
@@ -94,6 +95,7 @@ div.question {
   display: flex;
   margin-bottom: 8px;
   align-items: center;
+  font-size: 11pt;
 }
 
 .answer.field {
@@ -102,7 +104,9 @@ div.question {
   margin-right: 5px;
 }
 
-.answer::placeholder {
+.answer-text {
+  margin-left: 5px;
+  flex: 1;
   font-size: 11pt;
 }
 
@@ -123,7 +127,7 @@ label {
 }
 
 input[type="checkbox"]:checked + label {
-  background-color: #000;
+  background-color: #cccccc;
 }
 
 .button-2 {
