--- a/src/index.css
+++ b/src/index.css
@@ -332,3 +332,27 @@ input[type="checkbox"]:checked + label {
 .creation-buttons {
   display: flex;
 }
+
+.creation-buttons div:last-child.cancel-button-navigation {
+  margin-left: 0;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  table-layout: fixed;
+}
+
+th, td {
+  border: 1px solid rgb(255, 255, 255);
+  text-align: center;
+  padding: 8px;
+}
+
+th {
+  background-color: rgb(228, 212, 255);
+}
+
+td {
+  background-color: rgb(237, 237, 237);
+}
