--- a/src/index.css
+++ b/src/index.css
@@ -289,6 +289,11 @@ input[type="checkbox"]:checked + label {
   text-align: center;
   margin-right: 20px;
   padding: 20px;
+  cursor: pointer;
+}
+
+.send-button-creation:hover {
+  background-color:  rgb(143, 106, 210);
 }
 
 .cancel-button-navigation {
