--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,16 @@
 body {
   background-color: #f8efff;
   margin: 0;
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 .creator {
@@ -23,32 +21,27 @@ code {
 }
 
 .form {
-  margin: auto;
   width: 100%;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding: 20px 24px;
+  background-color: #ffffff;
+}
+
+.round-shadow-box-form {
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  background-color: #ffffff;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px auto;
   box-sizing: border-box;
 }
 
-.form.access{
+.access {
   width: 550px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   margin: auto;
+  background-color: #ffffff;
   padding: 0;
-}
-
-div {
-  display: block;
 }
 
 .header {
@@ -58,11 +51,11 @@ div {
   text-align: center;
 }
 
-.header-text{
+.header-text {
   margin: 0;
   padding: 0 25px;
   font-size: 16pt;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   letter-spacing: 2px;
   color: #ffffff;
 }
@@ -75,7 +68,7 @@ input:focus {
   border: none;
 }
 
-.field:hover{
+.field:hover {
   filter: brightness(90%);
 }
 
@@ -100,17 +93,14 @@ input.quiz-slag {
   text-align: center;
 }
 
-div.question {
-  margin-bottom: 15px;
-}
-
 .underline {
-    background-color: rgba(0,0,0,.12);
-    height: 1px;
+  background-color: rgba(0, 0, 0, 0.12);
+  height: 1px;
 }
 
 .question {
   font-size: 12pt;
+  margin-bottom: 15px;
 }
 
 .question.field {
@@ -157,17 +147,17 @@ input[type="checkbox"] {
 
 label {
   display: inline-block;
-  width: 18px; 
+  width: 18px;
   height: 18px;
   border-radius: 50%;
   background-color: #fff;
-  border: 1px solid rgba(0,0,0,.12);
+  border: 1px solid rgba(0, 0, 0, 0.12);
   cursor: pointer;
   margin-left: 10px;
   margin-right: 10px;
 }
 
-input[type="checkbox"]:checked + label {
+input[type="checkbox"]:checked+label {
   background-color: #cccccc;
 }
 
@@ -239,7 +229,7 @@ input[type="checkbox"]:checked + label {
   height: 100%;
   border: none;
   border-radius: 50%;
-  background-color:  rgba(224, 224, 224, 1);
+  background-color: rgba(224, 224, 224, 1);
 }
 
 .trash {
@@ -253,83 +243,61 @@ input[type="checkbox"]:checked + label {
   filter: brightness(90%);
 }
 
-.access-button {
-  background-color:  rgb(103, 58, 183);
+.clickable {
   text-align: center;
+  cursor: pointer;
+  color: #fff;
+}
+
+.access-button {
+  background-color: rgb(103, 58, 183);
   width: 20%;
   padding: 10px;
-  height: 20%;
-  cursor: pointer;
 }
 
 .access-button:hover {
-  background-color:  rgb(143, 106, 210);
+  background-color: rgb(143, 106, 210);
 }
 
 .create-quiz-button {
-  background-color:  rgb(166, 147, 199);
-  text-align: center;
+  background-color: rgb(166, 147, 199);
   width: 50%;
   padding: 10px;
-  cursor: pointer;
 }
+
 .create-quiz-button:hover {
-  background-color:  rgb(206, 195, 226);
+  background-color: rgb(206, 195, 226);
 }
 
-.send-button {
-  background-color:  rgb(103, 58, 183);
-  text-align: center;
-  width: 20%;
-  padding: 20px;
-}
-
+.send-button,
 .send-button-creation {
-  background-color:  rgb(103, 58, 183);
-  text-align: center;
-  margin-right: 20px;
+  background-color: rgb(103, 58, 183);
   padding: 20px;
-  cursor: pointer;
+  color: #ffffff;
+  margin-right: 20px;
 }
 
 .send-button-creation:hover {
-  background-color:  rgb(143, 106, 210);
+  background-color: rgb(143, 106, 210);
 }
 
 .cancel-button-navigation {
-  background-color:  rgb(255, 255, 255);
-  text-align: center;
+  background-color: rgb(255, 255, 255);
   margin-left: 20px;
   padding: 20px;
-  cursor: pointer;
+  color: #000000;
+  text-align: center;
 }
 
 .cancel-button-navigation:hover {
   background-color: rgb(216, 216, 216);
 }
 
-.access-text {
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-}
-
-.send-text {
-  display: inline-block;
-  color: #ffffff;
-  align-items: center;
-  box-sizing: border-box;
-  position: relative;
-  text-align: center;
-  margin: 0;
-}
-
+.access-text,
+.send-text,
 .cancel-text {
   display: inline-block;
-  color: #000000;
-  align-items: center;
-  box-sizing: border-box;
-  position: relative;
+  width: 100%;
   text-align: center;
   margin: 0;
 }
@@ -348,7 +316,8 @@ table {
   table-layout: fixed;
 }
 
-th, td {
+th,
+td {
   border: 1px solid rgb(255, 255, 255);
   text-align: center;
   padding: 8px;
